syntax = "proto3";
package ids;

import "gogoproto/gogo.proto";
import "assetmantle/base/ids/v1/assetID.v1.proto";
import "assetmantle/base/ids/v1/coinID.v1.proto";

message AnyOwnableID {
  option (gogoproto.goproto_getters) = false;

  oneof impl {
    AssetID asset_i_d = 1;
    CoinID coin_i_d = 2;
  }
}
