syntax = "proto3";
package assetmantle.splits.v1beta1.transactions.unwrap;

import "gogoproto/gogo.proto";
import "assetmantle/base/ids/internal/identityID.v1.proto";
import "assetmantle/base/ids/internal/anyOwnableID.v1.proto";

message Message {
  string from = 1;
  assetmantle.base.ids.IdentityID from_i_d = 2;
  assetmantle.base.ids.AnyOwnableID ownable_i_d = 3;
  string value = 4 [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
}
